--- a/package.json
+++ b/package.json
@@ -23,5 +23,7 @@
         "vue-loader": "^15.9.7",
         "vue-template-compiler": "^2.6.12"
     },
-    "dependencies": []
+    "dependencies": {
+        "vuex": "^3.6.2"
+    }
 }
